--- a/Count30/Count30/Count30/Count30.csproj
+++ b/Count30/Count30/Count30/Count30.csproj
@@ -5,8 +5,52 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Image\ic_hamburger.png" />
+    <None Remove="Image\ic_view_game.png" />
+    <None Remove="Image\ic_view_info.png" />
+    <None Remove="Image\ic_view_setting.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Image\ic_hamburger.png" />
+    <EmbeddedResource Include="Image\ic_view_game.png" />
+    <EmbeddedResource Include="Image\ic_view_info.png" />
+    <EmbeddedResource Include="Image\ic_view_setting.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.2.0.839982" />
     <PackageReference Include="Prism.DryIoc.Forms" Version="7.1.0.431" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Views\MenuPageMenuItem.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Views\ViewInfo.xaml.cs">
+      <DependentUpon>ViewInfo.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\ViewGame.xaml.cs">
+      <DependentUpon>ViewGame.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Views\MenuPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\MenuPageDetail.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\MenuPageMaster.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\ViewGame.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\ViewInfo.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
